[package]
name = "app-mev-bootee"
version = "0.1.0"
authors = [ "BooTEE Authors" ]
edition = "2021"

[features]
default = ["std"]

std = ["glog/std", "apps/std", "eth_types/std", "jsonrpc/std", "serde/std", "serde_json/std", "base/std", "statedb/std", "crypto/std", "net-http/std"]
tstd = ["sgxlib/tstd", "glog/tstd", "apps/tstd", "eth_types/tstd", "jsonrpc/tstd", "serde/tstd", "serde_json/tstd", "base/tstd", "statedb/tstd", "crypto/tstd", "net-http/tstd"]
#sgx = ["sgxlib-ra"]

[dependencies]
apps = { path = "../", default-features = false }
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
#sgxlib-ra = { git = "https://github.com/automata-network/sgxlib-ra", default-features = false, features = [ "tstd" ], optional = true }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false } 
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }
statedb = { git = "https://github.com/automata-network/statedb-rs", branch = "v2", default-features = false, features = [ "tstd" ] }
net-http = { git = "https://github.com/automata-network/net-http-rs", default-features = false }
#block_builder = { git = "https://github.com/automata-network/tee-builder", default-features = false, features = [ "tstd" ] }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx" }
blst = { version = "0.3", default-features = false }
#zeroize = { version = "=1.6" }
#hex = { version = "0.4", default-features = false, features = ["alloc"] }
evm-executor = { git = "https://github.com/automata-network/evm-executor-rs.git", default-features = false, features = [ "tstd" ] }
eth-tools = { git = "https://github.com/automata-network/eth-tools-rs.git", default-features = false, features = [ "tstd" ] }
mpt = { git = "https://github.com/automata-network/mpt-rs.git", default-features = false, features = [ "tstd" ] }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
